<resources>
    <string name="app_name">shop</string>
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_order">Order</string>
    <string name="title_login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_example_name">Name</string>
    <string name="item_example_desc">description</string>
    <string name="button_change">切换</string>
    <string name="_0">0</string>
    <string name="item_example_1">0</string>
    <string name="login_username">username</string>
    <string name="button_login">login</string>
    <string name="order_room">room</string>
    <string name="order_phone">phone</string>
    <string name="order_products">products</string>
    <string name="submit">submit</string>
    <string name="order_remark">remark</string>
    <string name="order_name">name</string>
    <string name="order_address">address</string>
    <string name="order_tele">tele</string>
    <string name="order_price">price</string>
</resources>
